v2.5.5 - :art: Fix the About picture and a :bug::iphone: and a problem with the height of the images on iphone

--- a/pages/about/styles/about.css
+++ b/pages/about/styles/about.css
@@ -13,6 +13,8 @@
 .image 
 {
   width: 80%;
+  max-width: 32%;
+  margin-top: 110px;
 }
 
 .description
@@ -34,4 +36,15 @@
   font-family: 'Magneta-Thin';
   font-size: 0.5rem;
   font-style: italic;
+}
+
+
+@media all and (max-width: 910px)
+{
+ .image
+ {
+   width: 80%;
+   max-width: 80%;
+   margin-top: 0;
+ }
 }
