--- a/styles/projects.css
+++ b/styles/projects.css
@@ -35,7 +35,6 @@ body main .container > div
   position: relative;
   width: 48%;
   min-width: 402px;
-  height: fit-content;
 }
 .eliseDjoBourjoie
 {
@@ -138,6 +137,7 @@ body main .container > div a:hover
   body main .container > div img 
   {
     width: 80%;
+    height : 100%;
   }
   .notreDame
   {
